<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/reading_title"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_negative_bold"
            android:text="@string/last_readings" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_water_reading"
            style="@style/CardStyleSecond"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:id="@+id/cur_date_text"
                    style="@style/FirstText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_colon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/date"
                    style="@style/SecondText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06-04-2023"
                    app:layout_constraintStart_toEndOf="@id/cur_date_text"
                    app:layout_constraintTop_toTopOf="@id/cur_date_text"
                    app:layout_constraintBottom_toBottomOf="@id/cur_date_text"
                    />
                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cur_date_text"
                    app:layout_constraintStart_toStartOf="@id/cur_date_text">
                    <TextView
                        android:id="@+id/last_text"
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_colon"
                        app:layout_constraintTop_toBottomOf="@id/cur_date_text"
                        app:layout_constraintStart_toStartOf="@id/cur_date_text"/>

                    <TextView
                        android:id="@+id/last"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="760"
                        app:layout_constraintStart_toEndOf="@id/last_text"
                        app:layout_constraintTop_toTopOf="@id/last_text"
                        app:layout_constraintBottom_toBottomOf="@id/last_text"
                        />
                    <TextView
                        android:id="@+id/cur_text"
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_colon"
                        app:layout_constraintTop_toBottomOf="@id/last_text"
                        app:layout_constraintStart_toStartOf="@id/last_text"/>

                    <TextView
                        android:id="@+id/cur"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="760"
                        app:layout_constraintStart_toEndOf="@id/cur_text"
                        app:layout_constraintTop_toTopOf="@id/cur_text"
                        app:layout_constraintBottom_toBottomOf="@id/cur_text"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/cubs_text"
                    style="@style/FirstText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cubs_colon"
                    app:layout_constraintTop_toBottomOf="@id/linear"
                    app:layout_constraintStart_toStartOf="@id/linear"/>

                <TextView
                    android:id="@+id/cubs"
                    style="@style/SecondText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    app:layout_constraintStart_toEndOf="@id/cubs_text"
                    app:layout_constraintTop_toTopOf="@id/cubs_text"
                    app:layout_constraintBottom_toBottomOf="@id/cubs_text"
                    />
                <Button
                    android:id="@+id/add_reading_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_reading"
                    android:drawableEnd="@drawable/ic_add"
                    android:drawableTint="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/cubs_text"
                    app:layout_constraintStart_toStartOf="@id/cubs_text"
                    />
                <Button
                    android:id="@+id/delete_reading_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_reading"
                    android:drawableEnd="@drawable/ic_delete"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:drawableTint="?attr/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/add_reading_button"
                    app:layout_constraintTop_toBottomOf="@id/add_reading_button"
                    app:layout_constraintStart_toStartOf="@id/add_reading_button"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_negative_bold"
            android:text="@string/water_detail_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_water_meter"
            style="@style/CardStyleSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/linear_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model_colon" />

                    <TextView
                        android:id="@+id/model"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="TK_15304" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_colon" />

                    <TextView
                        android:id="@+id/number"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="445464453" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_edizm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edizm_colon" />

                    <TextView
                        android:id="@+id/edizm"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="ГДж" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_koef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/koef_colon" />

                    <TextView
                        android:id="@+id/koef"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.00086" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area_colon" />

                    <TextView
                        android:id="@+id/area"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="51.80" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/out_colon"/>

                    <CheckBox
                        android:id="@+id/out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="false" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_spisan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spisan_colon"/>

                    <CheckBox
                        android:id="@+id/spisan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_sdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sdate_colon" />

                    <TextView
                        android:id="@+id/sdate"
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="20-06-2015" />
                </LinearLayout>
                <TextView
                    style="@style/ExtraText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_water_meter"
                    android:paddingStart="4dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_check"
                    style="@style/CardStyleSecond"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/linear_pdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/FirstText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pdate_colon" />

                            <TextView
                                android:id="@+id/pdate"
                                style="@style/SecondText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="20-06-2015" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linear_fdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/FirstText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fdate_colon" />

                            <TextView
                                android:id="@+id/fdate"
                                style="@style/SecondText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="20-06-2015" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:fontFamily="@font/signika_negative_bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heat_history_colon"
            android:paddingStart="4dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:padding="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>
</ScrollView>