<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/date_ot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_ot_colon"
        style="@style/ChildText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/date_do_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_do_colon"
        style="@style/ChildText"
        app:layout_constraintTop_toBottomOf="@id/date_ot_text"
        app:layout_constraintStart_toStartOf="@id/date_ot_text"
        />
    <TextView
        android:id="@+id/days_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_colon"
        style="@style/ChildText"
        app:layout_constraintTop_toBottomOf="@id/date_do_text"
        app:layout_constraintStart_toStartOf="@id/date_do_text"
        />
    <TextView
        android:id="@+id/last_colon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_colon"
        style="@style/ChildText"
        app:layout_constraintTop_toBottomOf="@id/days_text"
        app:layout_constraintStart_toStartOf="@id/days_text"
        />
    <TextView
        android:id="@+id/current_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_colon"
        style="@style/ChildText"
        app:layout_constraintTop_toBottomOf="@id/last_colon_text"
        app:layout_constraintStart_toStartOf="@id/last_colon_text"
        />
    <TextView
        android:id="@+id/cubs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cubs_colon"
        style="@style/ChildText"
        app:layout_constraintTop_toBottomOf="@id/current_text"
        app:layout_constraintStart_toStartOf="@id/current_text"
        />
    <TextView
        android:id="@+id/date_ot"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/date_ot_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_ot_text"
        tools:text="20-03-2023" />
    <TextView
        android:id="@+id/date_do"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/date_do_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_do_text"
        tools:text="500.00" />
    <TextView
        android:id="@+id/days"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/days_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/days_text"
        tools:text="500.00" />
    <TextView
        android:id="@+id/last"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/last_colon_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/last_colon_text"
        tools:text="500.00" />
    <TextView
        android:id="@+id/current"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/current_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_text"
        tools:text="500.00" />

    <TextView
        android:id="@+id/cubs"
        style="@style/SecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@id/cubs_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cubs_text"
        tools:text="500.00" />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cubs" />

</androidx.constraintlayout.widget.ConstraintLayout>